--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       z-index: 2;
     }
 
+    /* Double the width of .top-bar on mobile and tablet screens */
+    @media (max-width: 768px) {
+      .bottom-banner {
+        width: 0px;
+      }
+    }
   </style>
 </head>
 
