--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     if (type === 'movie') {
                         embedUrl = `https://vidbinge.dev/embed/movie/${id}`;
                     } else if (type === 'tv' && season && episode) {
-                        embedUrl = `https://vidbinge.dev/embed/tv/${id}/${season}/${episode}`;
+                        embedUrl = `https://vidbinge.dev/embed/tv/${id}/1/1`;
                     } else {
                         console.error("Invalid URL format for series");
                         return;
