--- a/embed.html
+++ b/embed.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,70 +28,57 @@
 
         .top-bar {
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 100%;
+            height: 60px;
             background-color: rgba(31, 31, 31, 0.15);
-            color: #000000;
+            color: white;
             backdrop-filter: blur(5px);
             box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
             position: absolute;
             top: 0;
-            color: white;
-            right: 1px;
-            width: 100%;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             font-size: 20px;
             font-weight: bold;
             font-family: 'CustomFont', sans-serif;
             z-index: 1;
             transition: transform 0.5s ease;
-
         }
 
         .slide-up {
             transform: translateY(-100%);
-        }
-
-
-        .hide-banner {
-            display: none;
         }
     </style>
 </head>
 
 <body>
     <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge</div>
-    <iframe id="videoFrame"
-        scrolling="no"
-        allowfullscreen="true"></iframe>
+    <iframe id="videoFrame" scrolling="no" allowfullscreen></iframe>
 
     <script>
-        function setIframeSource() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const mediaUrl = urlParams.get('aurl');
-            const iframe = document.getElementById('videoFrame');
+        document.addEventListener("DOMContentLoaded", function() {
+            function setIframeSource() {
+                const urlParams = new URLSearchParams(window.location.search);
+                const mediaUrl = urlParams.get('aurl');
+                const iframe = document.getElementById('videoFrame');
 
-            if (mediaUrl) {
-                iframe.src = mediaUrl;
+                if (mediaUrl) {
+                    iframe.src = mediaUrl;
                 } else {
                     console.error("Invalid media URL format");
                 }
             }
-        }
 
-        // Trigger the banner to slide up after 3 seconds
-        setTimeout(() => {
-            document.getElementById('topBanner').classList.add('slide-up');
-        }, 3000);
+            // Trigger the banner to slide up after 3 seconds if it exists
+            const banner = document.getElementById('topBanner');
+            if (banner) {
+                setTimeout(() => {
+                    banner.classList.add('slide-up');
+                }, 3000);
+            }
 
-        setIframeSource();
+            setIframeSource();
+        });
     </script>
 </body>
-
 </html>
