--- a/embed.html
+++ b/embed.html
@@ -55,21 +55,28 @@
     <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge</div>
     <iframe id="videoFrame" scrolling="no" allowfullscreen></iframe>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            function setIframeSource() {
-                const urlParams = new URLSearchParams(window.location.search);
-                const mediaUrl = urlParams.get('aurl');
-                const iframe = document.getElementById('videoFrame');
+<script>
+    if (matches) {
+        const type = matches[1];
+        const id = matches[2];
+        const season = matches[3];
+        const episode = matches[4];
 
-                if (mediaUrl) {
-                    iframe.src = mediaUrl;
-                } else {
-                    console.error("Invalid media URL format");
-                }
-            }
+        let embedUrl;
+        if (type === 'movie') {
+            embedUrl = `embed.html?aurl=https://vidbinge.dev/embed/movie/${id}`;
+        } else if (type === 'tv' && season && episode) {
+            embedUrl = `embed.html?aurl=https://vidbinge.dev/embed/tv/${id}/${season}/${episode}`;
+        } else {
+            console.error("Invalid URL format for series");
+            return;
+        }
 
-            // Trigger the banner to slide up after 3 seconds if it exists
+        iframe.src = embedUrl;
+    } else {
+        console.error("Invalid media URL format");
+    }
+    // Trigger the banner to slide up after 3 seconds if it exists
             const banner = document.getElementById('topBanner');
             if (banner) {
                 setTimeout(() => {
