--- a/embed.html
+++ b/embed.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,69 +29,90 @@
 
         .top-bar {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 60px;
+            height: 100%;
             background-color: rgba(31, 31, 31, 0.15);
-            color: white;
+            color: #000000;
             backdrop-filter: blur(5px);
             box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
             position: absolute;
             top: 0;
+            color: white;
+            right: 1px;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 20px;
             font-weight: bold;
             font-family: 'CustomFont', sans-serif;
             z-index: 1;
             transition: transform 0.5s ease;
+
         }
 
         .slide-up {
             transform: translateY(-100%);
+        }
+
+
+        .hide-banner {
+            display: none;
         }
     </style>
 </head>
 
 <body>
     <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge</div>
-    <iframe id="videoFrame" scrolling="no" allowfullscreen></iframe>
+    <iframe id="videoFrame"
+        allowfullscreen="true"></iframe>
 
     <script>
-        const matches = window.location.pathname.match(/\/(movie|tv)\/(\d+)(?:\/(\d+)\/(\d+))?/);
-
         function setIframeSource() {
-            if (matches) {
-                const type = matches[1];
-                const id = matches[2];
-                const season = matches[3];
-                const episode = matches[4];
+            const urlParams = new URLSearchParams(window.location.search);
+            const mediaUrl = urlParams.get('aurl');
+            const iframe = document.getElementById('videoFrame');
 
-                let embedUrl;
-                if (type === 'movie') {
-                    embedUrl = `embed.html?aurl=https://vidbinge.dev/embed/movie/${id}`;
-                } else if (type === 'tv' && season && episode) {
-                    embedUrl = `embed.html?aurl=https://vidbinge.dev/embed/tv/${id}/${season}/${episode}`;
+            if (mediaUrl) {
+                const mediaPattern = /tmdb-(movie|tv)-(\d+)(?:-[^\/]*)?(?:\/(\d+)\/(\d+))?/;
+                const matches = mediaUrl.match(mediaPattern);
+
+                if (matches) {
+                    const type = matches[1];
+                    const id = matches[2];
+                    const season = matches[3];
+                    const episode = matches[4];
+
+                    let embedUrl;
+                    if (type === 'movie') {
+                        embedUrl = `https://vidbinge.dev/embed/movie/${id}`;
+                    } else if (type === 'tv' && season && episode) {
+                        embedUrl = `https://vidbinge.dev/embed/tv/${id}/1/1`;
+                    } else {
+                        console.error("Invalid URL format for series");
+                        return;
+                    }
+
+                    iframe.src = embedUrl;
                 } else {
-                    console.error("Invalid URL format for series");
-                    return;
+                    console.error("Invalid media URL format");
                 }
-
-                document.getElementById('videoFrame').src = embedUrl;
             } else {
-                console.error("Invalid media URL format");
+                console.error("No media URL provided");
             }
         }
 
-        // Trigger the banner to slide up after 3 seconds if it exists
-        const banner = document.getElementById('topBanner');
-        if (banner) {
-            setTimeout(() => {
-                banner.classList.add('slide-up');
-            }, 3000);
-        }
+        // Trigger the banner to slide up after 3 seconds
+        setTimeout(() => {
+            document.getElementById('topBanner').classList.add('slide-up');
+        }, 3000);
 
-        // Call the function to set the iframe source
         setIframeSource();
     </script>
 </body>
+
 </html>
