--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge</div>
     <iframe id="videoFrame"
-        sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation allow-presentation" scrolling="no"
+        scrolling="no"
         allowfullscreen="true"></iframe>
 
     <script>
