--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
         .hide-banner {
             display: none;
         }
+        a{
+            color: white;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
 <body>
-    <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge</div>
+    <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge, an ad supported platform. An adblocker like <a href=https://ublockorigin.com>UBlock</a>or <a href="https://www.ghostery.com">Ghostery></a>is recomended</div>
     <iframe id="videoFrame"
         scrolling="no"
         allowfullscreen="true"></iframe>
