--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         a{
             color: white;
             text-decoration: underline;
+            display: inline;
         }
     </style>
 </head>
