--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 </head>
 
 <body>
-    <div class="top-bar" id="topBanner">SamJ Movies is now powered by VidBinge, an ad supported platform. An adblocker like <a href=https://ublockorigin.com>UBlock</a>or <a href="https://www.ghostery.com">Ghostery></a>is recomended</div>
+    <div class="top-bar" id="topBanner">
+        SamJ Movies is now powered by VidBinge, an ad-supported platform. An adblocker like 
+        <a href="https://ublockorigin.com">UBlock</a> or 
+        <a href="https://www.ghostery.com">Ghostery</a> is recommended.
+    </div>
     <iframe id="videoFrame"
         scrolling="no"
         allowfullscreen="true"></iframe>
