--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
             font-family: 'CustomFont', sans-serif;
             z-index: 1;
@@ -74,10 +74,7 @@
 
 <body>
     <div class="top-bar" id="topBanner">
-        <span>SamJ Movies is now powered by VidBinge, an ad-supported platform. An adblocker like 
-                <a href="https://ublockorigin.com">UBlock</a> or 
-                <a href="https://www.ghostery.com">Ghostery</a>
-                 is recommended.
+        <span>SamJ Movies is now powered by VidBinge, an ad-supported platform.
         </span>
     </div>
     <iframe id="videoFrame"
