--- a/backup.html
+++ b/backup.html
@@ -124,7 +124,7 @@
                     if (type === 'movie') {
                         embedUrl = `https://111movies.com/movie/${id}`;
                     } else if (type === 'tv' && season && episode) {
-                        embedUrl = `https:/111movies.com/tv/${id}/1/1`;
+                        embedUrl = `https://111movies.com/tv/${id}/1/1`;
                     } else {
                         console.error("Invalid URL format for series");
                         return;
