--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 
                     let embedUrl;
                     if (type === 'movie') {
-                        embedUrl = `https://vidbinge.dev/embed/movie/${id}`;
+                        embedUrl = `https://vidsrc.dev/embed/movie/${id}`;
                     } else if (type === 'tv' && season && episode) {
-                        embedUrl = `https://vidbinge.dev/embed/tv/${id}/1/1`;
+                        embedUrl = `https://vidsrc.dev/embed/tv/${id}/1/1`;
                     } else {
                         console.error("Invalid URL format for series");
                         return;
